Fix Java 11 compat: Stream.toList() -> Collectors.toList()
Stream.toList() was added in Java 16. Also set fail-fast: false so
all matrix jobs run even if one fails.

https://claude.ai/code/session_01S1ZeyRwg7BTY7iEHo3bLPV